Synchronized all LinkedLists - see issue 2